--- a/ch09_classes.ipynb
+++ b/ch09_classes.ipynb
@@ -1284,13 +1284,140 @@
    "id": "c249bad6",
    "metadata": {},
    "source": [
-    "## Importing classes"
+    "## Importing classes\n",
+    "\n",
+    "We can keep programs from getting cluttered by importing modules that may contain functions and classes that we've written.  There are a few different ways of import modules, such as defining the exact class or function of interest from a module.  Alternatively, you could simply import the entire module and use dot notation to access internal functions and clases.  This approach makes function calls and instatiation unambiguous, because the module name is always attached in the call.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76a5fe0a",
+   "metadata": {},
+   "source": [
+    "## Python standard library\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ae5905b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jen's favorite language is Python.\n",
+      "Sarah's favorite language is C.\n",
+      "Edward's favorite language is Ruby.\n",
+      "Phil's favorite language is Python.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Experiment with different modules from the Python standard library\n",
+    "import collections\n",
+    "\n",
+    "# Standard dictionaries are unordered-- they don't keep track of where each key-value pair entry is in the data structure\n",
+    "# The collections module contains a class to create OrderedDict() objects\n",
+    "favorite_languages = collections.OrderedDict()\n",
+    "\n",
+    "# Populate the ordered dictionary\n",
+    "favorite_languages['jen'] = 'python'\n",
+    "favorite_languages['sarah'] = 'c'\n",
+    "favorite_languages['edward'] = 'ruby'\n",
+    "favorite_languages['phil'] = 'python'\n",
+    "\n",
+    "# Print the results-- these will be printed in the order in which they were added\n",
+    "for name, language in favorite_languages.items():\n",
+    "    print(f\"{name.title()}'s favorite language is {language.title()}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fff63f9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 9-14 dice\n",
+    "# Create a class Die with one attribute, sides, with a default value of 6\n",
+    "# Create a method called roll_die() that prints a random number between 1 and the number sides\n",
+    "# Create the 6-sided die and roll it 10 times\n",
+    "import random\n",
+    "\n",
+    "class Die:\n",
+    "    \"\"\"Model an n-sided die.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, sides=6):\n",
+    "        \"\"\"Initialize attributes of the die.\"\"\"\n",
+    "        self.sides = sides\n",
+    "        \n",
+    "    def roll_die(self):\n",
+    "        \"\"\"Simulate rolling the die and drawing a random integer each turn.\"\"\"\n",
+    "       \n",
+    "        roll = random.randint(1, self.sides)\n",
+    "        return roll\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "adbf6a8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The die has 6 sides.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initiate new object\n",
+    "my_die = Die()\n",
+    "\n",
+    "# Show attributes \n",
+    "print(f'The die has {my_die.sides} sides.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e4d1f507",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulated 10 random rolls:\n",
+      "6\n",
+      "4\n",
+      "5\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "1\n",
+      "5\n",
+      "1\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simulate 10 rolles\n",
+    "print('Simulated 10 random rolls:')\n",
+    "for i in range(0, 11):\n",
+    "    print(my_die.roll_die())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2a945d4",
+   "id": "65ccbc46",
    "metadata": {},
    "outputs": [],
    "source": []
