added notes on classes from official Python tutorial

--- a/ch09_classes.ipynb
+++ b/ch09_classes.ipynb
@@ -1415,9 +1415,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "406d3ebb",
+   "metadata": {},
+   "source": [
+    "## Exploring classes in the official Python documentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1adcdad",
+   "metadata": {},
+   "source": [
+    "A namespace is a mapping between a name and an object.  This is important, because we can ensure that the appropriate function is used if two modules share the same function name.  For example, in the official Python documentation, `module_01.maximize` and `module_02.maximize` are appropriately handled, because they are both in different namespaces; in one namespace, `maximize` maps to the `module_01` module, while in the other namespace, `maximize` maps to `module_02`.  \n",
+    "\n",
+    "Interestingly, module attributes can be read-only or writeable (most are writeable).  This could be an interesting feature to explore in the future if we're dealing with data that we absolutely don't want to be modified.  \n",
+    "\n",
+    "When creating class methods, the first argument is always the instance the method is called on, which is typically why it is called `self`.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65ccbc46",
+   "id": "ad59c523",
    "metadata": {},
    "outputs": [],
    "source": []
